backend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    open.innovation.ai/application: backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    open.innovation.ai/application: backend
